<resources>
    <string name="app_name">Wastify</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="scan">Scan</string>
    <string name="title_mart">Mart</string>
    <string name="title_classifications">Classifications List</string>
    <string name="title_location">Location</string>
    <string name="welcome_banner">Welcome Banner</string>
    <string name="login_wastify">Login with Wastify Account</string>
    <string name="login_google">Login with Google Account</string>
    <string name="logo">Logo</string>
    <string name="login">Masuk</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="click_here">Klik disini</string>
    <string name="dont_have_an_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="confirm_pwd">Konfirmasi Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="hello">Hello,</string>
    <string name="username_home">%s</string>
    <string name="article_source">Kompas.com</string>
    <string name="article_title">7 Jenis Sampah Yang Perlu Kamu Ketahui!</string>
    <string name="article_home_title">Artikel untukmu hari ini</string>
    <string name="start">Mulai</string>
    <string name="help_description2">Cara untuk manajemen sampah terbaikmu!</string>
    <string name="help_description1">Gimana sih cara pakai Wastify?</string>
    <string name="waste_amount">%d Sampah</string>
    <string name="your_waste">Sampah Kamu</string>
    <string name="user_point">%d Poin</string>
    <string name="your_points">Poin Kamu</string>
    <string name="perhatikan_background">Perhatikan Background!</string>
    <string name="panduan_desc">Pastikan sampah berada di background yang bersih dan kontras ya!</string>
    <string name="panduan_foto">Panduan Foto</string>
    <string name="camera">Kamera</string>
    <string name="use_your_cam">Pakai kameramu sekarang untuk ambil foto sampah!</string>
    <string name="gallery">Galeri</string>
    <string name="get_photo_from_your_gallery">Ambil foto dari galerimu!</string>
    <string name="title_leaderboards">Papan Peringkat</string>
    <string name="no_data">No Data</string>
    <string name="waste_classification_list">List Klasifikasi Sampah</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="you_sure">Apakah kamu yakin ingin keluar?</string>
    <string name="scan_with_what">Mau Scan Pakai Apa?</string>
    <string name="preview">Pratinjau</string>
    <string name="analyze">Analisis Foto</string>
    <string name="result">Hasil</string>
    <string name="title_recommendation">Rekomendasi terhadap sampah :</string>
    <string name="title_your_trash_made_from">Sampah anda terbuat dari bahan</string>
    <string name="made_from">%s</string>
    <string name="recommendation">%s</string>
    <string name="email">Email</string>
    <string name="home">Beranda</string>
    <string name="save">Simpan</string>
    <string name="placeholder_waste_card_details2">Masih dapat dipakai ulang</string>
    <string name="placeholder_waste_card_details1">Plastik</string>
    <string name="waste_collectors_location">Lokasi Pengepul</string>
    <string name="change_password">Ubah Password</string>
    <string name="congrats">Selamat! Kamu sudah tahu cara memakai Wastify!</string>
    <string name="finish">Selesai</string>
    <string name="target_details">target details</string>
    <string name="spotlight_first_detail">Cari tahu artikel dan berita terkait sampah terbaru disini!</string>
    <string name="second_spotlight_details">Klik di sini untuk mengetahui rankingmu!</string>
    <string name="third_spotlight_details">Klik di sini untuk klasifikasi sampahmu!</string>
    <string name="fourth_spotlight_details">Klik di sini untuk melihat data klasifikasi yang telah kamu simpan</string>
    <string name="fifth_spotlight_details">Klik di sini untuk ketahui lokasi pengepul terdekatmu!</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="change">Ubah</string>
    <string name="rank">%d</string>
    <string name="recomendations">Rekomendasi terhadap sampah :</string>
    <string name="reduce">- %s</string>
    <string name="reuse">- %s</string>
    <string name="refuse">- %s</string>
    <string name="rot">- %s</string>
    <string name="repurpose">- %s</string>
    <string name="recycle">- %s</string>
    <string name="classification">Klasifikasi</string>
    <string name="new_username">Username Baru</string>
    <string name="new_email">Email Baru</string>
    <string name="please_insert_your_new_username_first">Silahkan masukkan username baru anda terlebih dahulu</string>
    <string name="please_insert_your_new_email_first">Silahkan masukkan email baru anda terlebih dahulu</string>
</resources>