<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mart"
        android:icon="@drawable/ic_mart"
        android:title="@string/title_mart"/>

    <item
        android:id="@+id/navigation_dashboard"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_classification"
        android:icon="@drawable/ic_list"
        android:title="@string/title_classifications"/>

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location"
        android:title="@string/title_location" />

</menu>