<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.scan.ScanFragment1"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvPanduan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panduan_foto"
        android:textSize="32sp"
        style="@style/manropeBold"
        android:textColor="@color/green" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_panduan"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/ivPanduan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_preview"
            android:scaleType="fitXY"/>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tvPerhatikan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perhatikan_background"
        android:textSize="20sp"
        style="@style/manropeBold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panduan_desc"
        android:textAlignment="center"
        android:textSize="14sp"
        style="@style/manropeMedium"
        android:textColor="@color/dark_gray"
        android:ems="14"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_start"
        style="@style/manropeBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:drawablePadding="5dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:layout_gravity="end"
        app:drawableEndCompat="@drawable/ic_arrow"
        android:layout_marginEnd="50dp" />
</LinearLayout>