<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.scan.ResultFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/result"
        android:textColor="@color/green"
        android:textSize="32sp"
        style="@style/manropeBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_result"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tvResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/preview"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitXY"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/ll_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_your_trash_made_from"
            style="@style/manropeMedium"
            android:textSize="16sp"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/tv_made_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_from"
            style="@style/manropeBold"
            android:textSize="36sp"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recommendation"
            style="@style/manropeMedium"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/tv_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendation"
            style="@style/manropeBold"
            android:textSize="20sp"
            android:ems="12"
            android:textAlignment="center"
            android:textColor="@color/green"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:text="@string/home"
        android:layout_weight="1"
        android:layout_marginHorizontal="20dp"
        style="@style/manropeSemiBold"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        app:icon="@drawable/ic_home"
        app:iconTint="@color/white"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@id/ll_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ll_details"-->
<!--        android:layout_marginTop="80dp">-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="66dp"-->
<!--            android:text="@string/home"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            style="@style/manropeSemiBold"-->
<!--            android:backgroundTint="@color/green"-->
<!--            android:textColor="@color/white"-->
<!--            app:icon="@drawable/ic_home"-->
<!--            app:iconTint="@color/white"-->
<!--            app:cornerRadius="14dp"/>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="66dp"-->
<!--            android:text="@string/save"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            style="@style/manropeSemiBold"-->
<!--            android:backgroundTint="@color/green"-->
<!--            android:textColor="@color/white"-->
<!--            app:icon="@drawable/ic_save"-->
<!--            app:iconTint="@color/white"-->
<!--            app:cornerRadius="14dp"/>-->
<!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>