<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="0dp"
    app:strokeWidth="0dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/welcome_banner"
        android:src="@drawable/welcome_banner"
        android:layout_marginTop="-240dp"
        android:layout_gravity="center|top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|bottom"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="80dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_wastify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login_wastify"
            android:textAllCaps="false"
            android:backgroundTint="@color/green"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:textColor="@color/white"
            app:cornerRadius="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login_google"
            android:textAllCaps="false"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:cornerRadius="12dp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>