<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment"
    android:background="@color/white">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="200dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/hello"
        style="@style/manropeRegular"
        app:layout_constraintStart_toEndOf="@+id/cv_profile"
        app:layout_constraintTop_toTopOf="@+id/cv_profile" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        style="@style/manropeSemiBold"
        android:text="@string/username_home"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/cv_profile"
        app:layout_constraintStart_toEndOf="@+id/cv_profile" />
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        app:strokeColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="30dp"
        android:outlineSpotShadowColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:paddingVertical="40dp">

            <ImageView
                android:id="@+id/iv_diamond"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_diamond"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="10dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_trash"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_trash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginEnd="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_point"
                style="@style/manropeMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_points"
                android:textColor="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="@+id/iv_diamond"
                app:layout_constraintStart_toStartOf="@+id/iv_diamond"
                app:layout_constraintTop_toBottomOf="@id/iv_diamond" />

            <TextView
                android:id="@+id/tv_point_details"
                style="@style/manropeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_point"
                app:layout_constraintEnd_toEndOf="@+id/tv_point"
                app:layout_constraintStart_toStartOf="@+id/tv_point"
                app:layout_constraintTop_toBottomOf="@id/tv_point" />
            
            <TextView
                android:id="@+id/tv_trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_waste"
                app:layout_constraintEnd_toEndOf="@+id/iv_trash"
                app:layout_constraintStart_toStartOf="@+id/iv_trash"
                app:layout_constraintTop_toBottomOf="@id/iv_trash"
                style="@style/manropeMedium"
                android:textColor="@color/dark_gray"/>

            <TextView
                style="@style/manropeBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waste_amount"
                app:layout_constraintEnd_toEndOf="@+id/tv_trash"
                app:layout_constraintStart_toStartOf="@+id/tv_trash"
                app:layout_constraintTop_toBottomOf="@id/tv_trash" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_user_details"
        app:strokeColor="@color/gray"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="25dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp">

                <TextView
                    style="@style/manropeBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/help_description1"
                    android:textSize="20sp" />

                <TextView
                    style="@style/manropeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:ems="9"
                    android:text="@string/help_description2" />

                <TextView
                    style="@style/manropeBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/start"
                    app:drawableEndCompat="@drawable/ic_arrow" />
            </LinearLayout>

            <ImageView
                android:layout_width="138dp"
                android:layout_height="138dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_trash_dark"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_title_artikel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_home_title"
        style="@style/manropeBold"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/cv_help"
        app:layout_constraintTop_toBottomOf="@id/cv_help"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_articles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_artikel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/article_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>